--- a/index.html
+++ b/index.html
@@ -2,4 +2,22 @@
 layout: default
 ---
 <h1>Welcome!</h1>
-<p>This is my website :)</p>
+<div class="row">
+  <form class="col s12" name="search-form" onsubmit="return test()">
+    <div class="row">
+      <div class="input-field col s6">
+        <input placeholder="Placeholder" id="search" name="search" type="text" class="validate" />
+        <label for="search">Search</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12">
+        <button class="waves-effect btn">Submit</button>
+      </div>
+    </div>
+  </form>
+</div>
+<div class="row">
+  <div class="col s12" id="results">
+  </div>
+</div>
