--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <h1>Welcome!</h1>
 <div class="row">
+  <!--
   <form class="col s12" name="search-form" onsubmit="return test()">
     <div class="row">
       <div class="input-field col s6">
@@ -16,6 +17,8 @@ layout: default
       </div>
     </div>
   </form>
+  -->
+  <p>content here</p>
 </div>
 <div class="row">
   <div class="col s12" id="results">
