--- a/index.html
+++ b/index.html
@@ -18,9 +18,42 @@ layout: default
     </div>
   </form>
   -->
-  <p>content here</p>
+  <div class="col s8">
+
+    <ul class="collapsible img-collapse">
+      <li>
+        <div class="collapsible-header">
+          <div class="row img-row">
+            <div class="col s4 img-col">
+              <img class="img-thumb" data-id="1" src="https://materializecss.com/images/sample-1.jpg">
+            </div>
+            <div class="col s4 img-col">
+              <img class="img-thumb" data-id="a" src="https://materializecss.com/images/sample-1.jpg">
+            </div>
+            <div class="col s4 img-col">
+              <img class="img-thumb" data-id="302" src="https://materializecss.com/images/sample-1.jpg">
+            </div>
+          </div>
+        </div>
+        <div class="collapsible-body">
+          <div class="row img-details hide" data-id="1">
+            <p>First image info goes here</p>
+          </div>
+          <div class="row img-details hide" data-id="a">
+            <p>Image a...</p>
+          </div>
+          <div class="row img-details hide" data-id="302">
+            <p>302 image</p>
+          </div>
+        </div>
+      </li>
+    </ul>
+
+  </div>
+
 </div>
 <div class="row">
   <div class="col s12" id="results">
+    <img class="materialbox" width="650" src="https://materializecss.com/images/sample-1.jpg">
   </div>
 </div>
