--- a/index.html
+++ b/index.html
@@ -1,60 +1,11 @@
 ---
 layout: default
 ---
-<h1>Welcome!</h1>
-<div class="row">
-  <!--
-  <form class="col s12" name="search-form" onsubmit="return test()">
-    <div class="row">
-      <div class="input-field col s6">
-        <input placeholder="Placeholder" id="search" name="search" type="text" class="validate" />
-        <label for="search">Search</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col s12">
-        <button class="waves-effect btn">Submit</button>
-      </div>
-    </div>
-  </form>
-  -->
-  <!--
-  <div class="col s8">
-
-    <ul class="collapsible img-collapse">
-      <li>
-        <div class="collapsible-header">
-          <div class="row img-row">
-            <div class="col s4 img-col">
-              <img class="img-thumb" data-id="1" src="https://materializecss.com/images/sample-1.jpg">
-            </div>
-            <div class="col s4 img-col">
-              <img class="img-thumb" data-id="a" src="https://materializecss.com/images/sample-1.jpg">
-            </div>
-            <div class="col s4 img-col">
-              <img class="img-thumb" data-id="302" src="https://materializecss.com/images/sample-1.jpg">
-            </div>
-          </div>
-        </div>
-        <div class="collapsible-body">
-          <div class="row img-details hide" data-id="1">
-            <p>First image info goes here</p>
-          </div>
-          <div class="row img-details hide" data-id="a">
-            <p>Image a...</p>
-          </div>
-          <div class="row img-details hide" data-id="302">
-            <p>302 image</p>
-          </div>
-        </div>
-      </li>
-    </ul>
-
-  </div>
-  -->
-
-</div>
 <div class="row">
   <div class="col s12" id="results">
+    <div class="row center">
+      <h1>Welcome to the NASA navigator!</h1>
+      <h4>Enter search criteria above to explore NASA's image archives.</h4>
+    </div>
   </div>
 </div>
